<resources>
    <string name="app_name">Afaan Oromoo Kutaa 11ffaa</string>
    <string name="about_us">About us</string>
    <string name="more_apps">More apps</string>
    <string name="rate">Rate</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="change_style">Change style</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="phone">Phone</string>
    <string name="version">Version - </string>
    <string name="banner_ad_unit_id">ca-app-pub-8504401574247581/7695510893</string>
    <string name="test_interstitial_ads_unit_id">ca-app-pub-8504401574247581/5121813285</string>
    <string name="rate_our_app">Rate our App</string>
    <string name="thanks">If you enjoy using Afaan Oromoo Kutaa 11ffaa, please take a moment to rate it. Thank you for your support!</string>
    <string name="maybe">Maybe, later</string>
    <string name="rate_now">Rate Now</string>
    <string name="download_now">Download Now</string>
    <string name="download_more_apps">Download more apps</string>
    <string name="contact">Contact</string>
</resources>