<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/dialog_color_1"/>

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="-75dp"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="10dp">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icon"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/app_name"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_our_app"
                android:textColor="#CC000000"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:id="@+id/rateMessageTv"
                android:text="@string/thanks"/>

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:theme="@style/MyRatingBar"
                android:rating="5"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/maybe_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/maybe"
                    android:textColor="#CC000000"
                    android:textAllCaps="false"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_back_brown_6"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/rate_now_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/rate_now"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="false"
                    android:layout_marginStart="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/round_back_black_7"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>